fixed: error when omitting the logfile argument added: when referencing the logfile, the name is displayed for convenience

--- a/EpanetMerger/EPAMERGE.vbproj
+++ b/EpanetMerger/EPAMERGE.vbproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>EpanetMerger</RootNamespace>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+    <Copyright>Trietsch 2022</Copyright>
+    <Description>Epanet File Merger</Description>
   </PropertyGroup>
 
 </Project>
